--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -1,5 +1,10 @@
-{% extends 'base.html' %} {% block head %} {% endblock %} {% block body %}
-<div>
+{% extends 'base.html' %} 
+
+{% block head %} 
+{% endblock %} 
+
+{% block body %}
+<div class="container2">
   <iframe
     width="560"
     height="315"
