--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">
     {% block head %}{% endblock %}
 </head>
-<body>
+<body class="bod">
     {% block body %}{% endblock %}
 </body>
 </html>
