--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -4,7 +4,7 @@
 {% endblock %} 
 
 {% block body %}
-<div class="container2">
+<div class="container">
   <iframe
     width="560"
     height="315"
@@ -14,5 +14,10 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen
   ></iframe>
+</div>
+<div class="container2">
+  <p class="emailInfo">
+    Email jgonzalez1604@mymail.lausd.net, ravila0053@mymail.lausd.net, or mmvanbaal@gmail.com. Or come to room to 229 to learn more!!!
+  </p>
 </div>
 {% endblock %}
