--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -4,6 +4,12 @@
 {% endblock %} 
 
 {% block body %}
+<div class="placeimg">
+  <img src="../static/images/darrow.svg" alt="down_arrow" />
+</div>
+<div class="placeimg2">
+  <img src="../static/images/darrow.svg" alt="down_arrow" />
+</div>
 <div class="container">
   <iframe
     width="840"
@@ -14,5 +20,12 @@
     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
     allowfullscreen
   ></iframe>
+</div>
+
+<div class="container">
+  <p class="emailInfo goaround">
+    Email jgonzalez1604@mymail.lausd.net, ravila0053@mymail.lausd.net, or
+    mmvanbaal@gmail.com. Or go to room 229 for more information!!!
+  </p>
 </div>
 {% endblock %}
