--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -28,4 +28,5 @@
     mmvanbaal@gmail.com. Or go to room 229 for more information!!!
   </p>
 </div>
+{% block javascript %}{% endblock %}
 {% endblock %}
