--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
     <!--<link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}">-->
     {% block head %}{% endblock %}
 </head>
-<body class="bod">
+<body class="bg-secondary">
     {% block body %}
     {% endblock %}
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
