--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -1,32 +1,30 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 
 {% block head %} 
 {% endblock %} 
 
 {% block body %}
-<div class="placeimg">
-  <img src="../static/images/darrow.svg" alt="down_arrow" />
+<div class="container vh-100 d-flex justify-content-between align-items-center">
+  <img class="me-3" src="../static/images/darrow.svg" alt="arrow"/>
+  <div class="w-75">
+      <div class="ratio ratio-16x9 border border-5">
+        <iframe
+          src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0&autoplay=1"
+          title="YouTube video player"
+          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+          allowfullscreen
+        ></iframe>
+      </div>
+  </div>
+  <img class="ms-3"src="../static/images/darrow.svg" alt="arrow"/>
 </div>
-<div class="placeimg2">
-  <img src="../static/images/darrow.svg" alt="down_arrow" />
-</div>
-<div class="container">
-  <iframe
-    width="840"
-    height="472.5"
-    src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0&autoplay=1"
-    title="YouTube video player"
-    frameborder="0"
-    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-    allowfullscreen
-  ></iframe>
-</div>
-
-<div class="container">
-  <p class="emailInfo goaround">
-    Email jgonzalez1604@mymail.lausd.net, ravila0053@mymail.lausd.net, or
-    mmvanbaal@gmail.com. Or go to room 229 for more information!!!
+<div class="container vh-100 d-flex flex-column justify-content-center align-items-center">
+  <div class="border border-5 px-5 py-3">
+  <p class="fs-1 text-break lh-base text-center fw-bolder">
+    Email jgonzalez1604@mymail.lausd.net, ravila0053@mymail.lausd.net, 
+    or mmvanbaal@gmail.com. Or go to room 229 for more information!!!
   </p>
+  </div>
 </div>
-{% block javascript %}{% endblock %}
+{% block javascript %}{% endblock %} 
 {% endblock %}
