added class 'img-fluid'

--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -5,7 +5,7 @@
 
 {% block body %}
 <div class="container vh-100 d-flex justify-content-between align-items-center">
-  <img class="me-3" src="../static/images/darrow.svg" alt="arrow"/>
+  <img class="me-3 img-fluid" src="../static/images/darrow.svg" alt="arrow"/>
   <div class="w-75">
       <div class="ratio ratio-16x9 border border-5">
         <iframe
@@ -16,7 +16,7 @@
         ></iframe>
       </div>
   </div>
-  <img class="ms-3"src="../static/images/darrow.svg" alt="arrow"/>
+  <img class="ms-3 img-fluid"src="../static/images/darrow.svg" alt="arrow"/>
 </div>
 <div class="container vh-100 d-flex flex-column justify-content-center align-items-center">
   <div class="border border-5 px-5 py-3">
