--- a/templates/start.html
+++ b/templates/start.html
@@ -5,10 +5,10 @@
 
 {% block body %}
 <div class="container vh-100 d-flex flex-column justify-content-center align-items-center">
-      <h1 class="text-center display-1 fw-bolder">Vedugo Hill High School Hack Club</h1>
+      <h1 class="text-center display-1">Vedugo Hills High School <br/> Hack Club</h1>
       
       <button
-        class="mt-5 btn btn-info btn-lg fs-1 fw-bolder"
+        class="mt-4 btn btn-info btn-lg fs-1 fw-bolder"
         onclick="window.location.href='{{url_for('info')}}';"
       >
         Click Me
