--- a/templates/info.html
+++ b/templates/info.html
@@ -5,13 +5,14 @@
 {% endblock %} 
 {% block body %}
 <div class="container vh-100 d-flex flex-column justify-content-center align-items-center">
-      <p class="fs-1 text-break lh-base text-center fw-bolder">
+      <p class="fs-1 text-break text-center fw-bolder">
           VHHS hacks is a club for creative coding. 
           What is creative coding? It's basically 
           programing but with ✨pizzazz✨. This includes 
-          anything from a simple website about why kittens
-          are much cuter than puppies, to a making a program 
-          that uses A.I to identify every kitten in a photo!
+          anything from a simple website about why puppies
+          are much cuter than kittens, to making a program 
+          that uses A.I to identify every kitten and puppy 
+          in a photo!
       </p>
 
         <button
