--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -5,10 +5,11 @@
 
 {% block body %}
 <div class="container vh-100 d-flex justify-content-between align-items-center">
-  <img class="me-3 img-fluid" src="../static/images/darrow.svg" alt="arrow"/>
+  <img class="me-5 img-fluid" src="../static/images/darrow.svg" alt="arrow"/>
   <div class="w-75">
-      <div class="ratio ratio-16x9 border border-5">
+      <div class="ratio ratio-16x9">
         <iframe
+          class="borderBlue"
           src="https://www.youtube.com/embed/dQw4w9WgXcQ?controls=0&autoplay=1"
           title="YouTube video player"
           allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
@@ -16,11 +17,11 @@
         ></iframe>
       </div>
   </div>
-  <img class="ms-3 img-fluid"src="../static/images/darrow.svg" alt="arrow"/>
+  <img class="ms-5 img-fluid"src="../static/images/darrow.svg" alt="arrow"/>
 </div>
 <div class="container vh-100 d-flex flex-column justify-content-center align-items-center">
-  <div class="border border-5 px-5 py-3">
-  <p class="fs-1 text-break lh-base text-center fw-bolder">
+  <div class=" px-5 py-4 borderWhite">
+  <p class="fs-1 text-break text-center courgette">
     Email jgonzalez1604@mymail.lausd.net, ravila0053@mymail.lausd.net, 
     or mmvanbaal@gmail.com. Or go to room 229 for more information!!!
   </p>
