added more text to moreInfo

--- a/templates/moreInfo.html
+++ b/templates/moreInfo.html
@@ -23,7 +23,7 @@
   <div class=" px-5 py-4 borderWhite">
   <p class="fs-1 text-break text-center courgette">
     Email jgonzalez1604@mymail.lausd.net, ravila0053@mymail.lausd.net, 
-    or mmvanbaal@gmail.com. Or go to room 229 for more information!!!
+    or mmvanbaal@gmail.com. Or go to room 229 for more information!!! And don't forget to follow us on ig <a href="https://instagram.com/vhhs.hacks">@vhhs.hacks</a>!!!!
   </p>
   </div>
 </div>
